# omdb-api

./: Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: database_creation.sql
src/: config.py  logger.py
src/app/: initialization.py  main.py
src/core/: deps.py  security.py
src/exceptions/: movie_exceptions.py  omdb_repository_exceptions.py
src/repositories/: db_health_repository.py
src/repositories/database/: db_movie_repository.py  movie.py  session_factory.py  user.py
src/repositories/database/models/: base.py  movie.py  movie_rating.py  rating.py  user.py
src/routers/: health.py  health_router.py  movie.py  movie_router.py  user.py  user_router.py
src/schemas/requests/: insert_movies_request.py
src/schemas/responses/: login_response.py  movie.py  movie_responses.py  omdb.py  omdb_by_search.py  omdb_responses.py  pagination_response.py
src/schemas/shared/: movie_schemas.py  pagination_filter.py  user.py
src/services/: health.py  health_service.py  movie.py  movie_service.py  start.py  start_service.py  user.py  user_service.py
src/tests/unit_tests/: conftest.py
src/tests/unit_tests/fixtures/: client.py  movie_router.py  movie_router_fixtures.py  movie_service.py  movie_service_fixtures.py
src/tests/unit_tests/routers/: test_movie_router.py
src/tests/unit_tests/services/: test_movie_service.py
